<resources>
    <string name="app_name">MovieApp</string>
    <string name="title">title</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting">setting</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_details">Details</string>
    <string name="language">language : </string>
    <string name="overview">overview</string>
    <string name="popular">popular</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="choose_view">choose_view</string>



    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_view_key">view</string>
    <string name="pref_view_default">0</string>
    <string name="pref_location_label">enter form 1 to 3 to sort</string>
    <string name="release_date">release_date : </string>

    <!-- Key name for storing location in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_location_key" translatable="false">location</string>

    <!-- Default postal code for location preference [CHAR LIMIT=NONE] -->
    <string name="pref_location_default" translatable="false">0</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->

    <string name="sort_list_key" translatable="false">sort</string>

    <string name="pref_sort_title_View">chose_type_of_movies</string>
    <string-array name="pref_example_list_titles">
        <item>all Movies</item>
        <item>Favourites Movies</item>
        <item>Most Viewed Movies</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>


    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
