<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.ahmed.movieapp.Details_movie_Fragment">


    <ScrollView
        android:id="@+id/scrol"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/poster_photo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="0dp"
                        android:padding="0dp"
                        android:scaleType="fitXY" />
                </FrameLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_gravity="center_horizontal"
                        android:padding="6dp"
                        android:paddingLeft="4dp"
                        android:text="@string/title"
                        android:textColor="@color/colorAccent"
                        android:textSize="10dp" />

                    <TextView
                        android:id="@+id/title_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_toRightOf="@id/title"
                        android:padding="2dp"
                        android:paddingLeft="6dp"
                        android:text="@string/title"
                        android:textColor="@android:color/background_dark"
                        android:textSize="10dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/language"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/title_text"
                        android:layout_gravity="left"
                        android:padding="2dp"
                        android:paddingLeft="4dp"
                        android:text="@string/language"
                        android:textColor="@color/colorAccent"
                        android:textSize="10dp" />

                    <TextView
                        android:id="@+id/language_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/title_text"
                        android:layout_gravity="left"
                        android:layout_toRightOf="@id/language"
                        android:padding="2dp"
                        android:paddingLeft="4dp"
                        android:text="@string/language"
                        android:textSize="10dp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/language"
                        android:layout_gravity="left"
                        android:layout_weight="0"
                        android:padding="2dp"
                        android:paddingLeft="4dp"
                        android:text="@string/release_date"
                        android:textColor="@color/colorAccent"
                        android:textSize="10dp" />

                    <TextView
                        android:id="@+id/release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/language"
                        android:layout_gravity="left"
                        android:layout_toRightOf="@id/date"
                        android:text="@string/language"
                        android:textSize="10dp"
                        android:textStyle="bold" />


                    <RatingBar
                        android:id="@+id/rate_bar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/date"
                        android:rating="3.0" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:gravity="center"
                    android:padding="2dp"
                    android:text="@string/overview"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/overview_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/language"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/popylair"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_weight="0.5"
                        android:gravity="left"
                        android:padding="2dp"
                        android:text="@string/popular"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/popylair_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_weight="0.5"
                        android:text="@string/popular"
                        android:textSize="15dp"
                        android:textStyle="bold" />


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0.5"
                    android:text="favourite"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/favourite_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0.5"
                    android:src="@mipmap/star" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ListView
            android:id="@+id/listView_trailers"
            android:layout_width="match_parent"
            android:layout_height="175dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ListView
            android:id="@+id/listView_reviews"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>


</LinearLayout>
